# sourcedeps

./: pyproject.toml  setup.py
sourcedeps/: __init__.py
testing/: test_all.py
testing/examples/: assignment.py  basic.py  classdef.py  diverging.py  multi_level.py  other_statements.py
