[tool.poetry]
name = "sourcedeps"
version = "0.1.0"
description = ""
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
astroid = "^2.3.3"
networkx = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
ipython = "^7.11.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
